--- a/maqueen_tf/CMakeLists.txt
+++ b/maqueen_tf/CMakeLists.txt
@@ -9,6 +9,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
@@ -26,12 +27,12 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-add_executable(maqueen_pro_tf_node src/maqueen_pro_tf_node.cpp)
+add_executable(maqueen_plusV2_tf_node src/maqueen_plusV2_tf_node.cpp)
 add_executable(maqueen_lite_tf_node src/maqueen_lite_tf_node.cpp)
-ament_target_dependencies(maqueen_pro_tf_node rclcpp geometry_msgs tf2 tf2_ros tf2_geometry_msgs nav_msgs)
-ament_target_dependencies(maqueen_lite_tf_node rclcpp geometry_msgs tf2 tf2_ros tf2_geometry_msgs nav_msgs)
+ament_target_dependencies(maqueen_plusV2_tf_node rclcpp geometry_msgs sensor_msgs tf2 tf2_ros tf2_geometry_msgs nav_msgs)
+ament_target_dependencies(maqueen_lite_tf_node rclcpp geometry_msgs sensor_msgs tf2 tf2_ros tf2_geometry_msgs nav_msgs)
 
-install(TARGETS maqueen_pro_tf_node DESTINATION lib/${PROJECT_NAME})
+install(TARGETS maqueen_plusV2_tf_node DESTINATION lib/${PROJECT_NAME})
 install(TARGETS maqueen_lite_tf_node DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
